--- a/registration/templates/registration/login.html
+++ b/registration/templates/registration/login.html
@@ -1,37 +1,55 @@
-{% extends 'core/base_login.html' %}
 {% load static %}
-{% block title %}{% endblock %}
-{% block content %}
-<style>.errorlist{color:red;}</style>
-<section>
-    {% if 'register' in request.GET %}
-        <p style="color: green">Usuario registrado correctamente</p>
-    {% endif%}
-    <form action="" method="post">
-        {% csrf_token %}
-        <h4 class="mb-3 text-blue text-center">SOLUCIONES PARA PYME</h4>
-        {% if form.non_field_errors %}
-            <p style="color:red">Usuario o contraseña incorrectos, prueba de nuevo.</p>
-        {% endif %}
-        <div class="mb-3">
-            <label for="user" class="form-label">Usuario</label>
-            <input type="text" name="username" class="form-control"/>
-            <span class="feedback body-small text-regular"></span>
+<!DOCTYPE html>
+<html lang="en">
+    <head>
+        <meta charset="UTF-8" />
+        <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+        <link rel="stylesheet" type="text/css" href="{% static 'css/style.css' %}"/>
+        <title>Happy Teeth</title>
+    </head>
+        <body>
+            <div class="container">
+                <div class="cl">
+                    <div class="divtitle">
+                        <h1 class="title">Studio Dental Happy Teeth</h1>
+                    </div>
+                    <p class="pp">privacy policy and terms of service</p>
+                </div>
+                <div class="cr">
+                    <div class="logo">
+                        <p class="logotext">HT</p>
+                    </div>
+                <style>.errorlist{color:red;}</style>
+                <section>
+                    {% if 'register' in request.GET %}
+                    <p style="color: green">Usuario registrado correctamente</p>
+                    {% endif%}
+                    <form action="" method="post">
+                        {% csrf_token %}
+                        <h4 class="mb-3 text-blue text-center">Iniciar Sesion</h4>
+                        {% if form.non_field_errors %}
+                        <p style="color: red">
+                            Usuario o contraseña incorrectos, prueba de nuevo.
+                        </p>
+                        {% endif %}
+                            <div class="x">
+                                <label for="user">Usuario</label>
+                                <input type="text" name="username" class="c1" />
+                                <span class="feedback body-small text-regular"></span>
+                            </div>
+                            <div class="x">
+                                <label for="password">Contraseña</label>
+                                <input type="password" name="password" class="c1" id="password" />
+                                <span class="feedback body-small text-regular"></span>
+                            </div>
+                            <div>
+                                <button type="submit" class="btn center-btn">
+                                <span>Login</span>
+                                </button>
+                            </div>
+                    </form>
+                </section>
+            </div>
         </div>
-        <div class="mb-3">
-            <label for="password" class="form-label">Contraseña</label>
-            <input type="password" name="password" class="form-control" id="password"/>
-            <span class="feedback body-small text-regular"></span>
-        </div>
-        <div class="d-flex justify-content-end mb-3">
-            <a class="body-normal text-blue text-decoration-underline cursor-pointer">Olvidé mi contraseña</a>
-        </div>
-        <div class="d-flex justify-content-center">
-            <button type="submit" class="button">
-                <span>Iniciar Sesión</span>
-            </button>
-        </div>
-    </form>
-</section>
-
-{% endblock %}
+    </body>
+</html>
