--- a/estudio/templates/estudio/index.html
+++ b/estudio/templates/estudio/index.html
@@ -28,16 +28,20 @@
                     HT
                 </p>
             </div>
-            <a href="{% url 'paciente' %}">
-                <button class="btn">
-                    Paciente
-                </button>
-            </a>
-            <a href="{% url 'odontologo' %}">
-                <button class="btn">
-                    Odontologo
-                </button>
-            </a>
+            <div class="btn">
+                <a href="{% url 'paciente' %}">
+                    <button class="btn1">
+                        Paciente
+                    </button>
+                </a>
+            </div>
+            <div class="btn">
+                <a href="{% url 'odontologo' %}">
+                    <button class="btn1">
+                        Odontologo
+                    </button>
+                </a>
+            </div>
         </div>
     </div>
 </body>
