--- a/estudio/templates/estudio/odontologo.html
+++ b/estudio/templates/estudio/odontologo.html
@@ -31,9 +31,14 @@
                     HT
                 </p>
             </div>
-            <button class="btn">
-                Ver Agenda
-            </button>
+            <div class="btn">
+                <a href="">
+                    <button class="btn1">
+                        Ver Agenda
+                    </button>
+                </a>
+            </div>
+            
         </div>
     </div>
 </body>
