--- a/estudio/templates/estudio/paciente.html
+++ b/estudio/templates/estudio/paciente.html
@@ -30,16 +30,20 @@
                     HT
                 </p>
             </div>
-            <a href="{% url 'agendarCita' %}">
-                <button class="btn">
-                    Agendar Cita
-                </button>
-            </a>
-            <a href="{% url 'verCita' %}">
-                <button class="btn">
-                    Ver Citas Agendadas
-                </button>
-            </a>
+            <div class="btn">
+                <a href="{% url 'agendarCita' %}">
+                    <button class="btn1">
+                        Agendar Cita
+                    </button>
+                </a>
+            </div>
+            <div class="btn">
+                <a href="{% url 'verCita' %}">
+                    <button class="btn1">
+                        Ver Citas Agendadas
+                    </button>
+                </a>
+            </div>
         </div>
     </div>
 </body>
