--- a/core/templates/core/base_admin.html
+++ b/core/templates/core/base_admin.html
@@ -52,9 +52,9 @@
 
                 <!--=== Menu Cita ===-->  
                 {% if template_name == 'estudio/estudio.html'%}
-                    <a href="{% url 'main' %}" class='item active'>
+                    <a href="{% url 'index' %}" class='item active'>
                 {% else %}
-                    <a href="{% url 'main' %}" class='item'>
+                    <a href="{% url 'index' %}" class='item'>
                 {% endif %}
                     <span class="material-icons-outlined">
                         estudio_2
