--- a/estudio/templates/estudio/agendarCita.html
+++ b/estudio/templates/estudio/agendarCita.html
@@ -63,8 +63,10 @@
                         <button type="button" class="btnhora" onclick="seleccionarBoton(this)">15:00 - 16:00</button>
                     </div>
                 </div>
+                <div class="btnconfirmar">
                 <input type="hidden" name="horaInicio" id="horaInicio">
-                <button type="submit" class="btn" onclick="mostrarModal(modal)">Confirmar</button>
+                <button type="submit" class="btn1" onclick="mostrarModal(modal)">Confirmar</button>
+            </div>
             </form>
             
             </div>
