--- a/estudio/templates/estudio/odontologo.html
+++ b/estudio/templates/estudio/odontologo.html
@@ -32,7 +32,7 @@
                 </p>
             </div>
             <div class="btn">
-                <a href="">
+                <a href="{% url 'ver_agenda' 0 %}">
                     <button class="btn1">
                         Ver Agenda
                     </button>
