--- a/estudio/templates/estudio/ver_agenda.html
+++ b/estudio/templates/estudio/ver_agenda.html
@@ -6,10 +6,12 @@
 <html>
 <head>
     <title>Calendario Semanal</title>
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta charset="UTF-8">
     <style>
 body {
     background: linear-gradient(120deg,#2E5BFC, #9AD5FF);
+    font-family: Inter;
 
 }
 .container {
@@ -48,12 +50,57 @@ td.has-info {
     color: white;
     text-align: center;
 }
+#modal div {
+    width: 350px;
+    height: 130px;
 
+    background-color: white;
+    border-radius: 10px;
+    -webkit-border-radius: 10px;
+    -moz-border-radius: 10px;
+    border: 1px solid #666666;
+    padding: 15px;
+    text-align: center;
+    font-weight: bold;
+    font-size: 15px;
+    position: absolute;
+    left: 50%;
+    top: 50%;
+    transform: translate(-50%, -50%);
+    -ms-transform: translate(-50%, -50%);
+    -webkit-transform: translate(-50%, -50%);
+}
+.p1 {
+    font-size: 20px;
+}
+.btnok {
+    padding: 10px 20px;
+    margin-top: 30px;
+    margin: 10px;
+    width: 100px;
+    border-radius: 15px;
+    background: linear-gradient(120deg, #2E5BFC, #9AD5FF);
+    color: white;
+    border: 0px;
+    font-size: 20px;
+}
+
+.btnok:hover {
+    cursor: pointer;
+    opacity: 0.8;
+}
+.hide {
+    visibility: hidden;
+}
 </style>
 </head>
-
-  
 <body>
+    <script>
+        function mostrarModal(modal) {
+        modal.classList.toggle('hide')
+    }
+    </script>
+    
     <header class="">
         <div class="">
           <div class="">
@@ -65,6 +112,21 @@ td.has-info {
               
           </div>
     </header>
+    <div id="modal" class="hide">
+        <div>
+            <p class="p1">
+                No tienes pacientes<br> agendados
+            </p>
+            <a href="{% url 'odontologo' %}">
+                <button class="btnok">
+                    Ok
+                </button>
+            </a>
+        </div>
+    </div>
+    {% if cant_eventos == 0 %}
+        <script> mostrarModal(modal)</script>
+    {% endif %}
     <div class="container">
         <a href="{% url 'odontologo' %}" style="color: white;">Volver</a>
         <a href="#" style="color: white;">Cerrar Sesión</a>
@@ -111,6 +173,8 @@ td.has-info {
 </div>
 
     </body>
+
+    
 
 </html>
 
