agrego cerrar sesion

--- a/estudio/templates/estudio/ver_agenda.html
+++ b/estudio/templates/estudio/ver_agenda.html
@@ -129,7 +129,7 @@ td.has-info {
     {% endif %}
     <div class="container">
         <a href="{% url 'odontologo' %}" style="color: white;">Volver</a>
-        <a href="#" style="color: white;">Cerrar Sesión</a>
+        <a href="{% url 'cerrar_sesion' %}" style="color: white;">Cerrar Sesión</a>
         
     </div>
     <div>
