--- a/estudio/templates/estudio/ver_agenda.html
+++ b/estudio/templates/estudio/ver_agenda.html
@@ -1,4 +1,3 @@
-
 {% load static %}
 {% block title %}{% endblock %}
 {% block content %}
@@ -156,8 +155,8 @@ td.has-info {
                     <td {% for evento in eventos_semana %}{% if evento.fechaAtencion == day and evento.obtener_hora == horario %} class="has-info"{% endif %}{% endfor %}>
                             {% for evento in eventos_semana %}
                                 {% if evento.fechaAtencion == day and evento.obtener_hora == horario %}
-                                <a href="#" style="color: black;">
                                     {{ evento.paciente.nombre }}
+                                    <a href="{% url 'paciente_ver' paciente_rut=evento.paciente.rut %}" style="color: black;">Ver</a>
                                 </a>
                                     <br>
                                 {% endif %}
